--- a/communicating-for-great-teamwork.html
+++ b/communicating-for-great-teamwork.html
@@ -44,6 +44,18 @@
       padding: 1rem;
       margin-top: 3rem;
     }
+    /* instructions block (added per your note; does not change other styles) */
+    .instructions {
+      background: #fff3cd;
+      border-left: 6px solid #ffc107;
+      padding: 1rem;
+      margin-bottom: 2rem;
+      border-radius: 8px;
+    }
+    .instructions i {
+      color: #856404;
+      margin-right: 0.5rem;
+    }
   </style>
 </head>
 <body>
@@ -54,13 +66,24 @@
   </header>
 
   <main class="container section">
+    <!-- Course instructions (kept exactly like your Communication page) -->
+    <div class="instructions">
+      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+      <ul>
+        <li>Complete each week in order — finish video, activity, and quiz.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
+      </ul>
+    </div>
 
     <div class="week">
       <h4>Week 1</h4>
       <p><strong>🎥 Video:</strong>
       <a href="#" onclick="openResource('https://www.youtube.com/embed/uNQkD-Pt0OE')">Watch Video</a></p>
       <p><strong>🧠 Quiz:</strong>
-      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Quiz</a></p>
+      <a href="#" onclick="openResource('https://forms.gle/GZ41Njrmyk1mp96h6?embedded=true')">View Quiz</a></p>
       <p><strong>📝 Activity:</strong> Identify a team you’ve been part of. What made it effective or ineffective? Submit 3 reflections:</p>
       <ul>
         <li>One thing the team did well</li>
@@ -77,7 +100,7 @@
       <p><strong>📖 Reading Material:</strong>
       <a href="https://www.verywellmind.com/disc-personality-quiz-8655057?utm_source=chatgpt.com" target="_blank">View Article</a></p>
       <p><strong>🧠 Quiz:</strong>
-      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Quiz</a></p>
+      <a href="#" onclick="openResource('https://forms.gle/ZNASiJsDhQU3u4Lq5?embedded=true')">View Quiz</a></p>
     </div>
 
     <div class="week">
@@ -85,7 +108,7 @@
       <p><strong>🎥 Video:</strong>
       <a href="#" onclick="openResource('https://www.youtube.com/embed/-Zfy3Ef8P_0')">Watch Video</a></p>
       <p><strong>🧠 Quiz:</strong>
-      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview#heading=h.hrbwha56fmwi')">View Quiz</a></p>
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeNwo6aHwQJw1fhvWDWiL2UInXgu793_lWlAS6aZCuPZ70A3g/viewform?embedded=true')">View Quiz</a></p>
       <p><strong>📝 Main Activity:</strong> Choose a scenario (e.g., miscommunication, disengagement, frustration). Write how you would respond in a supportive, clear, and respectful way.</p>
     </div>
 
@@ -104,7 +127,7 @@
       <p><strong>🎥 Video:</strong>
       <a href="#" onclick="openResource('https://www.youtube.com/embed/79eiqn_KFVA')">Watch Video</a></p>
       <p><strong>🧠 Quiz:</strong>
-      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Quiz</a></p>
+      <a href="#" onclick="openResource('https://forms.gle/A8F8HGFz3yp7mq49A?embedded=true')">View Quiz</a></p>
       <p><strong>Final Output – Team Communication Plan:</strong> Includes:</p>
       <ul>
         <li>Team purpose</li>
