--- a/communicating-for-great-teamwork.html
+++ b/communicating-for-great-teamwork.html
@@ -44,7 +44,7 @@
       padding: 1rem;
       margin-top: 3rem;
     }
-    /* instructions block (added per your note; does not change other styles) */
+    /* Instructions block (added per your requirement) */
     .instructions {
       background: #fff3cd;
       border-left: 6px solid #ffc107;
@@ -66,7 +66,8 @@
   </header>
 
   <main class="container section">
-    <!-- Course instructions (kept exactly like your Communication page) -->
+
+    <!-- Instructions (kept consistent with Communication page) -->
     <div class="instructions">
       <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
       <ul>
