--- a/thriving-through-change.html
+++ b/thriving-through-change.html
@@ -77,7 +77,7 @@
       <p><strong>📖 Reading:</strong> 
       <a href="https://ronntorossian.medium.com/building-trust-through-effective-organizational-change-communication-9e37be3c11e3" target="_blank">Building Trust Through Effective Organizational Change Communication</a></p>
       <p><strong>🧠 Quiz:</strong> 
-      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Q&As</a></p>
+      <a href="#" onclick="openResource('https://forms.gle/aPT4ZpbHCy4HnRZCA?embedded=true')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -85,6 +85,8 @@
       <p><strong>Objective:</strong> Understand the basic structure of effective change activities (communications, timelines, ownership, check-ins).</p>
       <p><strong>🎥 Video:</strong> 
       <a href="#" onclick="openResource('https://www.youtube.com/embed/wxVgd8h1svU')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://forms.gle/nrg3ZwFoGzqa7vaC9?embedded=true')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -99,6 +101,8 @@
         <li>Describe how you’d partner with them during a change</li>
         <li>Submit 2 collaboration steps</li>
       </ul>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://forms.gle/Zh1aUFgXLcDxieyU6?embedded=true')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -110,6 +114,8 @@
       <a href="#" onclick="openResource('https://www.youtube.com/embed/lMM9Br9a6RM?start=765')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> 
       <a href="https://checkify.com/checklists/seven-rs-of-change-management-checklist/" target="_blank">Seven R’s Change Management Checklist</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://forms.gle/cZnJTpG5KYZgRGHe9?embedded=true')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -121,6 +127,8 @@
       <a href="#" onclick="openResource('https://www.youtube.com/embed/do6e1UE4ruI')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> 
       <a href="https://galenemanuele.com/blog/change-transparency" target="_blank">How to Approach Change Management with Transparency</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://forms.gle/z8Ww6w2ffDcSP5mVA?embedded=true')">Take Quiz</a></p>
     </div>
 
 <div class="week">
@@ -130,7 +138,8 @@
   <a href="#" onclick="openResource('https://www.youtube.com/embed/0oVppTj6M5U?start=221')">Watch Video</a></p>
   <p><strong>🎥 Video 2:</strong> 
   <a href="#" onclick="openResource('https://www.youtube.com/embed/eScnBYZ_IAY?start=222')">Watch Video</a></p>
-  <p><strong>🧠 Quiz:</strong> [Insert Google Form link when ready]</p>
+  <p><strong>🧠 Quiz:</strong> 
+  <a href="#" onclick="openResource('https://forms.gle/rtDWCuYaDorYzZk3A?embedded=true')">Take Quiz</a></p>
   <p><strong>📝 Main Activity:</strong> Submit your “My Role in Change” Plan:</p>
   <ul>
     <li>Your key role & actions in a change scenario</li>
