--- a/strategic-stakeholder-communication.html
+++ b/strategic-stakeholder-communication.html
@@ -72,7 +72,7 @@
       <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/w84w4UO0UdI')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/HP2MZscvFl8')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> <a href="https://www.investopedia.com/terms/s/stakeholder.asp" target="_blank">What Are Stakeholders? Definition, Types, and Examples</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Match stakeholders / Q&As</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://forms.gle/aV4ipVAUbA5egXw66?embedded=true')">Take Quiz</a></p>
       <p><strong>📝 Main Activity:</strong> Pick one external stakeholder group (e.g., suppliers, regulators, community). Answer:</p>
       <ul>
         <li>What is important to them?</li>
@@ -86,6 +86,7 @@
       <h4>Week 2: How to Build Positive Influence with Stakeholders</h4>
       <p><strong>Objective:</strong> Learn how to ethically shape influence through empathy, alignment, and timing.</p>
       <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/Rab0hANPKRY')">How to Influence Your Stakeholders (Part 1)</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://forms.gle/38qXPy3CKRTtoyANA?embedded=true')">Take Quiz</a></p>
     </div>
 
     <div class="week">
@@ -93,6 +94,7 @@
       <p><strong>Objective:</strong> Learn how to communicate the company’s mission, strategy, and Charter Values to external partners and understand how every role contributes to external brand and trust.</p>
       <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/pRQ5D4gbdAU')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/O-oSSWpQ-Dk')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://forms.gle/dP6Zr1498mMjpem39?embedded=true')">Take Quiz</a></p>
       <p><strong>📝 Main Activity:</strong> Draft a short external communication piece (email, post, or speech snippet) that:</p>
       <ul>
         <li>Shares our mission/values</li>
@@ -107,6 +109,7 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/VHGTsEwbOJY')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/MjTtN0D6zKk')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> <a href="https://simplystakeholders.com/stakeholder-engagement/" target="_blank">Stakeholder Engagement Article</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://forms.gle/BhhVRL2S657WkZmu8?embedded=true')">Take Quiz</a></p>
       <p><strong>📝 Main Activity:</strong> Simulate attending an external meeting (e.g., supplier pitch):</p>
       <ul>
         <li>Draft an introduction that positively represents the company</li>
@@ -121,6 +124,7 @@
       <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/Kvhmzh7IG20')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/JFt6-0NHxnM')">Watch Video</a></p>
       <p><strong>📖 Reading:</strong> <a href="https://simplystakeholders.com/resources/guides/stakeholder-management/" target="_blank">Stakeholder Management Guide</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://forms.gle/bNKyHuW1SM7vBDTZ7?embedded=true')">Take Quiz</a></p>
       <p><strong>📝 Main Activity:</strong> Pick a sensitive topic (e.g., AI ethics). Draft a stakeholder talking note that:</p>
       <ul>
         <li>Acknowledges stakeholder concerns</li>
@@ -135,6 +139,7 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/LRRJNlZVkKg')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/AVOUtPcJAMc')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/P3vii5DklBs')">Watch Video</a></p>
+      <p><strong>🧠 Google Form Submission Link:</strong> <a href="#" onclick="openResource('https://forms.gle/LyUE54AG4LQGnsMq6?embedded=true')">Submit Here</a></p>
       <p><strong>📝 Main Activity:</strong> Create a Stakeholder Engagement Plan for your role:</p>
       <ul>
         <li>Identify one key stakeholder</li>
@@ -142,7 +147,6 @@
         <li>Include how you’ll build trust and promote our values</li>
       </ul>
       <p><a href="https://www.nhselect.nhs.uk/uploads/files/1/Stakeholder%20Engagement%20Strategy%20Template.pdf" target="_blank">Stakeholder Engagement Strategy Template (PDF)</a></p>
-      <p><strong>🧠 Google Form Submission Link:</strong> [Insert Google Form link here]</p>
     </div>
 
   </main>
